RESOLVED FIXED131467
REGRESSION (r165908): ~QuickLookHandle() tries to dereference a null ResourceHandle
https://bugs.webkit.org/show_bug.cgi?id=131467
Summary REGRESSION (r165908): ~QuickLookHandle() tries to dereference a null Resource...
Andy Estes
Reported 2014-04-09 17:37:33 PDT
REGRESSION (r165908): ~QuickLookHandle() tries to dereference a null ResourceHandle
Attachments
Patch (6.01 KB, patch)
2014-04-09 17:44 PDT, Andy Estes
thorton: review+
Andy Estes
Comment 1 2014-04-09 17:44:20 PDT
Andy Estes
Comment 2 2014-04-09 17:49:17 PDT
Note You need to log in before you can comment on or make changes to this bug.